--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://MgaKristiyanongHesus.github.io/"
+baseURL = "https://mgakristiyanonghesus.github.io/"
 # Title of your website (required).
 title = "Mga Kristiyanong Hesus"
 # Your theme name
